test/extension_test_cases/valid/dynamic/dynamicfunctions.wacc
# structs

# Output:
# #empty#

# Exit:
# 0

# Program:

begin
  doSomething(a, b, c, d, e, f) is
    print "a is " ;
    println a ;
    print "b is " ;
    println b ;
    print "c is " ;
    println c ;
    print "d is " ;
    println d ;
    print "e is " ;
    println e ;
    print "f is " ;
    println f ;
    return 'g'
  end
  bools = [ false, true ] ;
  ints = [ 1, 2 ] ;
  answer = call doSomething(42, true, 'u', "hello", bools, ints) ;
  print "answer is " ;
  println answer ;
  exit 0
end
